# avis

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  OpenGl1_Editor.sln  README.md  appversion.h  avis.desktop  githash.bat  githash.sh  mdvis.sln  modify_rpath.py  res.rc
mdvis/: CMakeLists.txt  Log.txt  mdvis.filters  mdvis.rc  mdvis.vcxproj  mod_exp.mod  mod_imp.mod  packages.config  resource.h  test.mod
mdvis/resources/backgrounds/Big Sight/: diffuse.hdr
mdvis/resources/backgrounds/FP Court/: diffuse.hdr  specular.hdr
mdvis/resources/shaders/: parConV_line.glsl  prochainV.glsl
mdvis/src/: AssetObjects.h  AudioEngine.cpp  AudioEngine.h  ChokoLait.cpp  ChokoLait.h  Defines.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Makefile  RenderEngine.cpp  SceneObjects.h  SceneScriptResolver.h  Types.cpp  hdr.cpp  hdr.h  lodepng.cpp  lodepng.h  main.cpp  makegen.cpp  makegen.h  makeres.cpp  mdchan.cpp  mdchan.h  unloader.cpp  unloader.h
mdvis/src/_py/: PyWeb.cpp  pynode.cpp  pynode.h  pyreader.cpp  pyreader.h
mdvis/src/_py/nodes/: pynode_plot.h
mdvis/src/asset/: animation.cpp  animation.h  animclip.h  assetmanager.cpp  assetmanager.h  assetobject.h  audioclip.cpp  audioclip.h  cameffect.cpp  cameffect.h  material.cpp  material.h  mesh.cpp  mesh.h  rendertexture.h  shader.cpp  shader.h  tetrahedron.cpp  tetrahedron.h  texture.cpp  texture.h  texture3d.cpp  texture3d.h  tube.cpp
mdvis/src/asset/img/: background.cpp  background.h  rendertexture.h  texture.cpp  texture.h  texture3d.cpp  texture3d.h
mdvis/src/core/: audio.cpp  bbox.h  debug.cpp  debug.h  display.cpp  display.h  font.cpp  font.h  input.cpp  input.h  io.cpp  io.h  math.h  mvp.cpp  mvp.h  ui.cpp  ui.h  ui3.cpp  ui3.h  uniquecaller.h
mdvis/src/imp/: CDV.h  CMakeLists.txt  GenericSSV.cpp  GenericSSV.h  dlpoly.h  lammps.h  pdb.cpp  pdbx.cpp
mdvis/src/live/: livesyncer.cpp  livesyncer.h  lj256.cpp  lj256.h  syncer_info.h
mdvis/src/md/: CDV.cpp  CDV.h  CMakeLists.txt  GenericSSV.cpp  GenericSSV.h  Gromacs.cpp  Gromacs.h  ParMenu.cpp  ParMenu.h  Particles.cpp  Particles.h  Protein.cpp  Protein.h  XYZ.cpp  dlpoly.cpp  importer_info.h  lammps.cpp  mdvbin.cpp  mdvbin.h  parloader.cpp  parloader.h  parmenu.cpp  particles.cpp  particles.h  particles_animdata.cpp  particles_attrdata.cpp  pdb.cpp  pdb.h  pdbx.cpp
mdvis/src/ocl/: denoise.cpp  kernel.h  oclcode.h  raytracer.cpp  raytracer.h
mdvis/src/py/: PyWeb.cpp  pybrowse.cpp  pynode.cpp  pynode.h  pyreader.cpp  pyreader.h
mdvis/src/py/nodes/: pynode_plot.cpp
mdvis/src/res/: attrdata.h  bnddata.h  coldata.h  prefdata.h  raddata.h  resdata.h  shddata.h
mdvis/src/res/_res/: bg_splash.h  circle.h  dm_lineball.h  dm_point.h  dm_stickball.h  dropdown.h  help_text.h  icon.h  mdc_hd1.h  mdc_hd2.h  mdc_leg.h  mdc_t4p.h  pause.h  tool_sel.h  trash.h  visible.h  visidden.h  zoomout.h
mdvis/src/res/_shd/: bezierFrag.h  bezierVert.h  blurFrag.h  colorPickerH.h  colorPickerSV.h  colorerFrag.h  coreFrag.h  coreFrag3.h  coreVertW.h  fontFrag.h  fontVert.h  marchGeom.h  minVert.h  reflFrag.h  selectorFrag.h  ssaoFrag.h  ssaoFrag2.h  voxelFrag.h
mdvis/src/res/shd/: bezierVert.h  blurFrag.h  colorPickerH2.h  colorPickerSV.h  colorerFrag.h  colorerFragPro.h  coreFrag2.h  coreFrag3.h  coreFragSky.h  coreVert.h  dofFrag.h  fontBlurFrag.h  fontVert.h  fxaaFrag.h  glowFrag.h  glowFrag2.h  lineWVert.h  marchVert.h  minVert.h  reflFrag.h  reflFragC.h  reflTrFrag.h  ssaoFrag.h  voxelVert.h
mdvis/src/scene/: object.cpp  object.h  scene.cpp  scene.h  sceneobject.cpp  sceneobject.h  transform.cpp  transform.h
mdvis/src/scene/comp/: CMakeLists.txt  animator.h  armature.cpp  armature.h  camera.cpp  camera.h  component.cpp  component.h  light.cpp  light.h  meshfilter.cpp  meshfilter.h  meshrenderer.cpp  meshrenderer.h  scenescript.cpp  scenescript.h  skinnedmeshrenderer.cpp  skinnedmeshrenderer.h
mdvis/src/tmp/: tiny_obj_loader.cpp
mdvis/src/ui/: browse.cpp  help.cpp  help.h  icons.cpp  icons.h  localizer.cpp  localizer.h  popups.cpp  popups.h  preferences.cpp  preferences.h  remotebrowsetarget.cpp  ui_ext.cpp  ui_ext.h
mdvis/src/utils/: BVH.cpp  BVH.h  CMakeLists.txt  avi.cpp  avi.h  aviriff2.h  color.cpp  color.h  dialog.cpp  dialog.h  dylib.cpp  dylib.h  effects.cpp  effects.h  fft.cpp  glext.h  glmext.cpp  glmext.h  net.cpp  net.h  plot.cpp  plot.h  precedurals.cpp  ptrext.h  random.cpp  random.h  rawvector.h  rect.cpp  refcnt.h  runcmd.cpp  runcmd.h  shader.cpp  shader.h  solidify.cpp  solidify.h  spline.cpp  ssh.cpp  ssh.h  strext.cpp  strext.h  (+5 more)
mdvis/src/vis/: CMakeLists.txt  changelog.cpp  changelog.h  cubemarcher.cpp  cubemarcher.h  options.cpp  options.h  pargraphics.cpp  pargraphics.h  preferences.cpp  preferences.h  renderer.cpp  renderer.h  selection.cpp  selection.h  shadows.cpp  shadows.h  system.cpp  system.h
mdvis/src/web/: CMakeLists.txt  Makefile  anbrowse.cpp  anbrowse.h  anconv.cpp  anconv.h  annode.cpp  annode.h  annode_internal.cpp  annode_internal.h  anops.cpp  anops.h  anscript.cpp  anscript.h  anscript_vars.cpp  anscript_vars.h  anweb.cpp  anweb.h  arrayview.cpp  cnode.cpp  creader.cpp  creader.h  cscript.cpp  cscript.h  dmscript.cpp  dmscript.h  errorview.cpp  errorview.h  fnode.cpp  freader.cpp  freader.h  fscript.cpp  main_ansrv.cpp  pynode.cpp  pyreader.cpp  pyreader.h  pyscript.cpp
mdvis/src/web/cc/: cnode.cpp  cnode.h  creader.cpp  creader.h  creader_old.cpp  cscript.cpp  cscript.h  cscript_old.cpp
mdvis/src/web/ft/: fnode.cpp  fnode.h  freader.cpp  freader.h  fscript.cpp  fscript.h
mdvis/src/web/inc/: Engine.cpp  Engine.h  debug.cpp  debug.h  dylib.cpp  dylib.h  io.cpp  stream.h  strext.cpp  strext.h
mdvis/src/web/nodes/: node_addbond.cpp  node_addbond.h  node_camera.cpp  node_camera.h  node_getcenter.cpp  node_gromacs.cpp  node_gromacs.h  node_info.cpp  node_info.h  node_inputs.cpp  node_inputs.h  node_plot.cpp  node_plot.h  node_recolor.cpp  node_recolor.h  node_remap.cpp  (+12 more)
mdvis/src/winonly/: minimalwin.h
mdvis/src/xdrfile/: xdrfile.c  xdrfile.h  xdrfile_trr.c  xdrfile_trr.h  xdrfile_xtc.c
mdvis/test/: tex_pixels.cpp
(+758 files in other folders)
